Restore missing trace

This was lost by https://chromium-review.googlesource.com/516422 but is
important to debug performance issues.

Bug: 729252
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I16aad8697473a2071b662c3d02fbf0f10e2de8b5
Reviewed-on: https://chromium-review.googlesource.com/523040
Reviewed-by: Victor Miura <vmiura@chromium.org>
Commit-Queue: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#476853}
Former-commit-id: fd5ac9164eebef1d4d853f13fc8a51a322afe739