gpu/command_buffer/service/command_buffer_service.cc
@@ -66,6 +66,9 @@ void CommandBufferService::Flush(int32_t put_offset) {
     return;
   }
 
+  TRACE_EVENT1("gpu", "CommandBufferService:PutChanged", "handler",
+               handler_->GetLogPrefix().as_string());
+
   put_offset_ = put_offset;
 
   DCHECK(buffer_);
